src/test/resources/semantic_errors/double_GEQ_string.notc
void main() {
    if (65.4 >= "hjfd") {
        return;
    }
}
